--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ajv": "^6.5.3",
+    "axios": "^0.18.0",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-axios": "^2.1.3",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.0.1",
+    "vue-session": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
